Fix about spacing

--- a/src/static/styles/game.scss
+++ b/src/static/styles/game.scss
@@ -641,10 +641,7 @@ section.main {
 
           .about {
             width: 850px;
-            display: flex;
             padding: 20px;
-            flex-direction: column;
-            align-items: flex-start;
             align-self: stretch;
             border-radius: 5px;
             background-color: col(bg-main-50);
